# CV

./: .gitattributes  .gitignore  AGENTS.MD  AGENTS.md  AGENT_INTEGRATION_BRIEF.md  CV.MD  CV_EM.MD  CV_EM_RU.MD  CV_HOD.MD  CV_HOD_RU.MD  CV_PM.MD  CV_PM_RU.MD  CV_RU.MD  CV_TECH.MD  CV_TECH_RU.MD  CV_TL.MD  CV_TL_RU.MD  Cargo.toml  LICENSE  README.MD  README.md  README_RU.MD  README_ru.md  REPO_AGENTS.MD  RESUME_EM.MD  RESUME_EM_RU.MD  RESUME_HOD.MD  RESUME_HOD_RU.MD  RESUME_PM.MD  RESUME_PM_RU.MD  RESUME_TECH.MD  RESUME_TECH_RU.MD  RESUME_TL.MD  RESUME_TL_RU.MD  ROADMAPMD.MD  SPEC.MD  Trunk.toml  cv.en.md  cv.md  cv.ru.md  (+8 more)
.cargo/: config.toml
.github/: dependabot.yml
.snapshots/: .gitkeep
BACKLOG/: README.MD
DOCS/: ARCHITECTURE.MD  DEPLOYMENT_AUDIT_20251007.MD  DEVOPS_GUIDE.MD  GITHUB_PAGES_BRANCH_DEPLOYMENT.MD  GUIDELINES.MD  KANBAN.MD  NEW_SITE_BUILD.MD  RESUME_LAYOUT_CHECKLIST.MD  SNAPSHOT_RECOVERY.MD  SPECIFICATION.MD  style.css
TOOLS/: ENVIRONMENT.MD
avatars/: ANALYST.md  ARCHITECT.md  DEVOPS.md  SECURITY.md  developer.md  tester.md
backlog/: README.md
docs/: ARCHITECTURE.MD  DevOps_Guide.md  GUIDELINES.md  Kanban.md  SPECIFICATION.md  index.html
latex/: cv.tex
new/: .gitignore  Cargo.toml  Trunk.toml  index.html  style.css
scripts/: assemble_pages_dist.sh  collapse_history.py  convert_cv.py  repo-setup.sh  setup_hh_secrets.sh
sitegen/: Cargo.toml  README.md
sitegen/src/: lib.rs  main.rs  parser.rs  pdfgen.rs  renderer.rs  templategen.rs
sitegen/templates/: page.hbs
sitegen/tests/: generate.rs  generate_assets.rs  generate_bin.rs  inline_start.rs  lib_tests.rs  links.rs  pdf_remote.rs  roles.rs
sitegen/tests/fixtures/: index.html
sitegen/tests/fixtures/ru/: index.html
src/: lib.rs
template/: base.typ
(+116 files in other folders)
