[package]
name = "sitegen"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
phf = { version = "0.13", features = ["macros"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[[bin]]
name = "validate"
path = "src/bin/validate.rs"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"
